--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -78,9 +78,9 @@
   --color-on-primary: #FFF;
   --color-primary-container: var(--color-blue-2);
 
-  --color-neutral: var(--color-grey-4);
+  --color-neutral: var(--color-grey-6);
   --color-on-neutral: #fff;
-  --color-neutral-container: var(--color-grey-2);
+  --color-neutral-container: var(--color-grey-3);
 
   --color-success: var(--color-green-5);
   --color-on-success: #fff;
@@ -104,7 +104,7 @@
   --color-hover: var(--color-grey-2);
   --color-on-hover: var(--color-black-3);
 
-  --color-scrim: rgba(50,56,62,.25);
+  --color-scrim: rgba(50, 56, 62, .25);
 
   --color-shadow: var(--color-grey-6);
   --color-outline: var(--color-grey-3);
@@ -137,7 +137,7 @@
 
   --radius: 3px;
 
-  --line: 0.9px solid var(--color-outline);
+  --line: 0.89px solid var(--color-outline);
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -161,17 +161,46 @@ body {
   margin: 0 !important;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-weight: 500;
   margin-block-end: 0;
   margin-block-start: 0
 }
-h1 {font-size: 2rem;   line-height: 2.5rem}
-h2 {font-size: 1.75rem; line-height: 2.25rem}
-h3 {font-size: 1.5rem; line-height: 2rem}
-h4 {font-size: 1.25rem; line-height: 1.75rem}
-h5 {font-size: 1.125rem; line-height: 1.5rem}
-h6 {font-size: 1rem; line-height: 1.375rem}
+
+h1 {
+  font-size: 2rem;
+  line-height: 2.5rem
+}
+
+h2 {
+  font-size: 1.75rem;
+  line-height: 2.25rem
+}
+
+h3 {
+  font-size: 1.5rem;
+  line-height: 2rem
+}
+
+h4 {
+  font-size: 1.25rem;
+  line-height: 1.75rem
+}
+
+h5 {
+  font-size: 1.125rem;
+  line-height: 1.5rem
+}
+
+h6 {
+  font-size: 1rem;
+  line-height: 1.375rem
+}
 
 body {
   color: var(--color-on-surface);
@@ -180,32 +209,63 @@ body {
   font-weight: 400;
 }
 
-a {color: inherit;text-decoration: none;}
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
 @media (prefers-color-scheme: system) {
-  html {color-scheme: system;}
+  html {
+    color-scheme: system;
+  }
 }
 
 /* Helper classes */
-.flex-row {display: flex}.flex-col {display: flex;flex-direction: column}
-.wid-100 {width: 100%}.wid-50 {width: 50%}.wid-33 {width: 33%}.wid-25 {width: 25%}
+.flex-row {
+  display: flex
+}
+
+.flex-col {
+  display: flex;
+  flex-direction: column
+}
+
+.wid-100 {
+  width: 100%
+}
+
+.wid-50 {
+  width: 50%
+}
+
+.wid-33 {
+  width: 33%
+}
+
+.wid-25 {
+  width: 25%
+}
 
 .WuiBg-primary {
   background-color: var(--color-primary);
   color: var(--color-on-primary);
 }
+
 .WuiBg-neutral {
   background-color: var(--color-neutral);
   color: var(--color-on-neutral);
 }
+
 .WuiBg-success {
   background-color: var(--color-success);
   color: var(--color-on-success);
 }
+
 .WuiBg-warning {
   background-color: var(--color-warning);
   color: var(--color-on-warning);
 }
+
 .WuiBg-danger {
   background-color: var(--color-error);
   color: var(--color-on-error);
