--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -69,7 +69,7 @@
 
   --color-grey-1: #FCFCFC;
   --color-grey-2: #F3F4F5;
-  --color-grey-3: #DBDEE0;
+  --color-grey-3: #E9EAEC;
   --color-grey-4: #B7BCC2;
   --color-grey-5: #9FA6AD;
   --color-grey-6: #777D82;
