--- a/src/lib/button/style.css
+++ b/src/lib/button/style.css
@@ -98,9 +98,11 @@
 }
 
 .WuiButton--solid:not(:disabled):hover,
-.WuiButton--solid:not(:disabled):focus,
-.WuiButton--soft:not(:disabled):hover,
-.WuiButton--soft:not(:disabled):focus {
+/* .WuiButton--solid:not(:disabled):focus, */
+.WuiButton--soft:not(:disabled):hover
+
+/* ,.WuiButton--soft:not(:disabled):focus  */
+  {
   filter: brightness(0.95);
 }
 
@@ -109,8 +111,10 @@
   --WuiButton-border-color: var(--WuiButton-bg, var(--color-primary));
 }
 
-.WuiButton--outline:not(:disabled):hover,
-.WuiButton--outline:not(:disabled):focus {
+.WuiButton--outline:not(:disabled):hover
+
+/* ,.WuiButton--outline:not(:disabled):focus */
+  {
   background-color: var(--WuiButton-bg-soft, var(--color-selection-container));
 }
 
@@ -122,8 +126,10 @@
   background-color: transparent;
 }
 
-.WuiButton--plain:not(:disabled):hover,
-.WuiButton--plain:not(:disabled):focus {
+.WuiButton--plain:not(:disabled):hover
+
+/* ,.WuiButton--plain:not(:disabled):focus */
+  {
   background-color: var(--WuiButton-bg-soft);
 }
 
