--- a/src/lib/inputs/select/style.css
+++ b/src/lib/inputs/select/style.css
@@ -14,22 +14,28 @@
   --WuiSelect-color-plain: var(--color-blue-1);
   --WuiLabel-color: var(--color-primary);
 }
+
 .WuiSelect--neutral {
   --WuiSelect-color-plain: var(--color-grey-1);
   --WuiLabel-color: var(--color-black-1);
 }
+
 .WuiSelect--neutral:focus-within {
   --WuiLabel-color: var(--color-primary);
 }
+
 .WuiSelect--success {
   --WuiSelect-color-plain: var(--color-green-1);
   --WuiLabel-color: var(--color-success);
 }
+
 .WuiSelect--warning {
   --WuiSelect-color-plain: var(--color-yellow-1);
   --WuiLabel-color: var(--color-warning);
 }
-.WuiSelect--danger, .WuiSelect__root:invalid {
+
+.WuiSelect--danger,
+.WuiSelect__root:invalid {
   --WuiSelect-color-plain: var(--color-red-1);
   --WuiLabel-color: var(--color-error);
 }
@@ -49,41 +55,49 @@
 .WuiSelect__combobox {
   padding: 0 calc(var(--space-nm) - 0.8px) !important;
 }
-.WuiSelect__combobox:not(.WuiButton--solid):focus, .WuiButton__combobox:not(.WuiSelect--solid):hover {
+
+.WuiSelect__combobox:not(.WuiButton--solid):focus,
+.WuiButton__combobox:not(.WuiSelect--solid):hover {
   background-color: transparent !important;
 }
+
 .WuiSelect--plain .WuiSelect__combobox {
   background-color: var(--WuiSelect-color-plain) !important;
 }
+
 .WuiSelect--neutral:not(.WuiSelect--solid) .WuiSelect__combobox__value {
   color: var(--color-on-surface);
 }
+
 .WuiSelect__combobox__placeholder {
   opacity: 0.8;
 }
-.WuiSelect__root:focus-within .WuiSelect__combobox , .WuiSelect__combobox--opened {
+
+.WuiSelect__root:focus-within .WuiSelect__combobox,
+.WuiSelect__combobox--opened {
   border-width: 1.8px
 }
 
 .WuiSelect__combobox__icon {
-  transition: transform 0.1s ease-in-out;
+  transition: transform 0.2s ease-in-out;
   opacity: 0.8;
 }
+
 .WuiSelect__root:focus-within .WuiSelect__combobox__icon,
 .WuiSelect__combobox--opened .WuiSelect__combobox__icon {
   opacity: 1;
-  transform: rotate(180deg);
+  transform: rotate(-180deg);
 }
 
 .WuiSelect__hidden_input {
-  clip:rect(1px, 1px, 1px, 1px);
-  clip-path:inset(50%);
-  height:1px;
-  width:1px;
-  margin:-1px;
-  overflow:hidden;
-  padding:0;
-  position:absolute;
-  left:50%;
-  bottom:0
+  clip: rect(1px, 1px, 1px, 1px);
+  clip-path: inset(50%);
+  height: 1px;
+  width: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  left: 50%;
+  bottom: 0
 }
