fix: ensure form validation before submitting

--- a/src/lib/layout/watfoe/style.css
+++ b/src/lib/layout/watfoe/style.css
@@ -1,13 +1,21 @@
-.WAuth-header {
-  background-color: var(--color-container);
+.WuiHeader {
+  background-color: var(--color-surface);
   border-bottom: var(--line);
   height: 50px;
   margin-bottom: var(--space-xs);
   padding: var(--space-sm) var(--space-lg);
+  position: fixed;
+  top: 0;
   z-index: 1;
 }
 
-.WAuth-header__logo {
+.WuiHeader__logo {
   /* Corrects the logo's vertical alignment */
   margin-top: 4px;
+}
+
+.WuiContent {
+  margin-top: 50px;
+  padding: var(--space-lg);
+  overflow-y: auto;
 }
