--- a/src/lib/inputs/select/style.css
+++ b/src/lib/inputs/select/style.css
@@ -66,17 +66,17 @@
 }
 
 .WuiSelect__root:focus-within .WuiSelect__combobox,
-.WuiSelect__combobox--opened {
-  border-width: 1.8px
+.WuiSelect__combobox[aria-expanded='true'] {
+  /* TODO: use the border color */
+  box-shadow: inset 0 0 0 0.5px var(--color-primary);
 }
 
 .WuiSelect__combobox__icon {
-  transition: transform 0.2s ease-in-out;
+  transition: transform 0.1s ease-in-out;
   opacity: 0.8;
 }
 
-.WuiSelect__root:focus-within .WuiSelect__combobox__icon,
-.WuiSelect__combobox--opened .WuiSelect__combobox__icon {
+.WuiSelect__combobox[aria-expanded='true'] .WuiSelect__combobox__icon {
   opacity: 1;
   transform: rotate(-180deg);
 }
