--- a/src/lib/styles/global.css
+++ b/src/lib/styles/global.css
@@ -11,6 +11,41 @@
 :root {
   --max-width: 100%;
 
+  --color-primary-1: #F7FBFD;
+  --color-primary-2: #dff1f9;
+  --color-primary-3: #bfe4f2;
+  --color-primary-4: #20a0d2;
+  --color-primary-5: #0092cc;
+  --color-primary-6: #0080b3;
+
+  --color-neutral-1: #FCFCFC;
+  --color-neutral-2: #F3F4F5;
+  --color-neutral-3: #E9EAEC;
+  --color-neutral-4: #B7BCC2;
+  --color-neutral-5: #9FA6AD;
+  --color-neutral-6: #777D82;
+
+  --color-success-1: #FBFCF8;
+  --color-success-2: #EEF2E5;
+  --color-success-3: #DDE6CC;
+  --color-success-4: #88A64D;
+  --color-success-5: #779933;
+  --color-success-6: #68862D;
+
+  --color-warning-1: #FFFCF7;
+  --color-warning-2: #FDF4DF;
+  --color-warning-3: #FCE9BF;
+  --color-warning-4: #F4B120;
+  --color-warning-5: #F2A600;
+  --color-warning-6: #D49100;
+
+  --color-danger-1: #FFF8F8;
+  --color-danger-2: #FFE5E5;
+  --color-danger-3: #FFCCCC;
+  --color-danger-4: #FF4D4D;
+  --color-danger-5: #FF3333;
+  --color-danger-6: #DF2D2D;
+
   --color-black-1: #606060;
   --color-black-2: #404040;
   --color-black-3: #202020;
@@ -18,85 +53,52 @@
 
   --color-white: #fff;
 
-  --color-blue-1: #F7FBFD;
-  --color-blue-2: #dff1f9;
-  --color-blue-3: #bfe4f2;
-  --color-blue-4: #20a0d2;
-  --color-blue-5: #0092cc;
-  --color-blue-6: #0080b3;
-
-  --color-yellow-1: #FFFCF7;
-  --color-yellow-2: #FDF4DF;
-  --color-yellow-3: #FCE9BF;
-  --color-yellow-4: #F4B120;
-  --color-yellow-5: #F2A600;
-  --color-yellow-6: #D49100;
-
-  --color-red-1: #FFF8F8;
-  --color-red-2: #FFE5E5;
-  --color-red-3: #FFCCCC;
-  --color-red-4: #FF4D4D;
-  --color-red-5: #FF3333;
-  --color-red-6: #DF2D2D;
-
-  --color-green-1: #FBFCF8;
-  --color-green-2: #EEF2E5;
-  --color-green-3: #DDE6CC;
-  --color-green-4: #88A64D;
-  --color-green-5: #779933;
-  --color-green-6: #68862D;
-
-  --color-grey-1: #FCFCFC;
-  --color-grey-2: #F3F4F5;
-  --color-grey-3: #E9EAEC;
-  --color-grey-4: #B7BCC2;
-  --color-grey-5: #9FA6AD;
-  --color-grey-6: #777D82;
-
-  --color-primary: var(--color-blue-5);
+  --color-primary: var(--color-primary-5);
   --color-on-primary: #FFF;
-  --color-primary-container: var(--color-blue-2);
+  --color-primary-container: var(--color-primary-2);
 
-  --color-neutral: var(--color-grey-5);
+  --color-neutral: var(--color-neutral-5);
   --color-on-neutral: #fff;
-  --color-neutral-container: var(--color-grey-2);
+  --color-neutral-container: var(--color-neutral-2);
 
-  --color-success: var(--color-green-5);
+  --color-success: var(--color-success-5);
   --color-on-success: #fff;
-  --color-success-container: var(--color-green-2);
+  --color-success-container: var(--color-success-2);
 
-  --color-warning: var(--color-yellow-5);
+  --color-warning: var(--color-warning-5);
   --color-on-warning: #fff;
-  --color-warning-container: var(--color-yellow-2);
+  --color-warning-container: var(--color-warning-2);
 
-  --color-error: var(--color-red-5);
+  --color-error: var(--color-danger-5);
   --color-on-error: #fff;
-  --color-error-container: var(--color-red-2);
+  --color-error-container: var(--color-danger-2);
 
   --color-surface: #fff;
   --color-on-surface: var(--color-black-4);
   --color-on-surface-variant: #5f6368;
 
-  --color-container: var(--color-grey-1);
+  --color-container: var(--color-neutral-1);
   --color-on-container: var(--color-black-3);
 
-  --color-hover: var(--color-grey-2);
+  --color-hover: var(--color-neutral-2);
   --color-on-hover: var(--color-black-3);
 
   --color-scrim: rgba(50, 56, 62, .25);
 
-  --color-shadow: var(--color-grey-6);
-  --color-outline: var(--color-grey-3);
-  --color-hairline: var(--color-grey-3);
+  --color-shadow: var(--color-neutral-6);
+  --color-outline: var(--color-neutral-3);
+  --color-hairline: var(--color-neutral-3);
 
-  --color-selection: var(--color-blue-5);
+  --color-selection: var(--color-primary-5);
   --color-on-selection: #fff;
-  --color-selection-container: var(--color-blue-2);
+  --color-selection-container: var(--color-primary-2);
 
-  --color-link: var(--color-blue-5);
+  --color-link: var(--color-primary-5);
 
-  --color-disabled: var(--color-grey-3);
-  --color-on-disabled: var(--color-grey-6);
+  --color-disabled: var(--color-neutral-3);
+  --color-on-disabled: var(--color-neutral-6);
+
+  --font-family: 'Lexend', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 
   --space-xs: 0.1875rem;
   --space-sm: 0.3125rem;
@@ -116,7 +118,7 @@
 
   --radius: 3px;
 
-  --line: 0.95px solid var(--color-outline);
+  --line: 1px solid var(--color-outline);
 }
 
 /* @media (prefers-color-scheme: dark) {
@@ -125,61 +127,20 @@
 
 * {
   box-sizing: border-box;
-  font-family: 'Lexend', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: var(--font-family);
   padding: 0;
   margin: 0;
   vertical-align: baseline;
-  transition: background-color 0.2s ease-in-out;
+  transition: background-color 0.1s ease-in-out;
   outline: none;
 }
 
 html,
 body {
-  max-width: 100vw;
+  min-width: 100vw;
   height: 100%;
-  overflow-x: hidden;
+  overflow: auto;
   margin: 0 !important;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: 500;
-  margin-block-end: 0;
-  margin-block-start: 0
-}
-
-h1 {
-  font-size: 2rem;
-  line-height: 2.5rem
-}
-
-h2 {
-  font-size: 1.75rem;
-  line-height: 2.25rem
-}
-
-h3 {
-  font-size: 1.5rem;
-  line-height: 2rem
-}
-
-h4 {
-  font-size: 1.25rem;
-  line-height: 1.75rem
-}
-
-h5 {
-  font-size: 1.125rem;
-  line-height: 1.5rem
-}
-
-h6 {
-  font-size: 1rem;
-  line-height: 1.375rem
 }
 
 body {
@@ -198,32 +159,6 @@ a {
   html {
     color-scheme: system;
   }
-}
-
-/* Helper classes */
-.flex-row {
-  display: flex
-}
-
-.flex-col {
-  display: flex;
-  flex-direction: column
-}
-
-.wid-100 {
-  width: 100%
-}
-
-.wid-50 {
-  width: 50%
-}
-
-.wid-33 {
-  width: 33%
-}
-
-.wid-25 {
-  width: 25%
 }
 
 .WuiBg-primary {
