--- a/src/lib/utils/backdrop/style.css
+++ b/src/lib/utils/backdrop/style.css
@@ -29,7 +29,7 @@
   background-color: var(--color-surface);
   border-radius: var(--radius);
   max-width: 80vw !important;
-  max-height: calc(100vh - calc(var(--space-xs) * 2)) !important;
+  max-height: calc(100vh - calc(var(--space-nm) * 2)) !important;
   overflow-y: auto;
 }
 
