--- a/src/lib/buttons/button/style.css
+++ b/src/lib/buttons/button/style.css
@@ -1,213 +1,22 @@
-.WuiButton {
-  align-items: center;
-  border: 1px solid var(--WuiButton-border-color, transparent);
-  border-radius: var(--WuiButton-radius, var(--radius));
-  color: var(--WuiButton-color-on-bg-soft);
-  cursor: pointer;
-  display: inline-flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  gap: var(--WuiButton-flex-gap, var(--space-nm));
-  height: var(--WuiButton-height, var(--button-height));
-  justify-content: var(--WuiButtonFlex-justify, center);
-  padding: 0 var(--WuiButton-paddingX, var(--space-md));
-  text-decoration: none;
-  overflow: hidden;
+.WuiButton--loading:disabled {
+  color: transparent !important;
+  position: relative;
 }
 
-.WuiButton:disabled {
-  pointer-events: none;
-  cursor: default;
+.WuiButton--loading:disabled * {
+  background-color: transparent !important;
+  color: transparent !important;
 }
 
-.WuiButton--gap-sm {
-  --WuiButton-flex-gap: var(--space-sm);
-}
-
-.WuiButton--gap-nm {
-  --WuiButton-flex-gap: var(--space-md);
-}
-
-.WuiButton--gap-md {
-  --WuiButton-flex-gap: var(--space-md);
-}
-
-.WuiButton--gap-lg {
-  --WuiButton-flex-gap: var(--space-lg);
-}
-
-.WuiButton--sm {
-  --WuiButton-height: var(--button-height-sm);
-  --WuiButton-paddingX: var(--space-nm);
-  --WuiButton-flex-gap: var(--space-sm);
-}
-
-.WuiButton--md {
-  --WuiButton-height: var(--button-height-md);
-  --WuiButton-paddingX: var(--space-md);
-  --WuiButton-flex-gap: var(--space-nm);
-}
-
-.WuiButton--lg {
-  --WuiButton-height: var(--button-height-lg);
-  --WuiButton-paddingX: var(--space-lg);
-  --WuiButton-flex-gap: var(--space-md);
-}
-
-.WuiButton--primary {
-  --WuiButton-bg: var(--color-primary);
-  --WuiButton-bg-soft: var(--color-selection-container);
-  --WuiButton-color-on-bg-soft: var(--color-primary);
-}
-
-.WuiButton--neutral {
-  --WuiButton-bg: var(--color-neutral);
-  --WuiButton-bg-soft: var(--color-neutral-container);
-  --WuiButton-color-on-bg-soft: var(--color-black-4);
-}
-
-.WuiButton--success {
-  --WuiButton-bg: var(--color-success);
-  --WuiButton-bg-soft: var(--color-success-container);
-  --WuiButton-color-on-bg-soft: var(--color-success);
-}
-
-.WuiButton--warning {
-  --WuiButton-bg: var(--color-warning);
-  --WuiButton-bg-soft: var(--color-warning-container);
-  --WuiButton-color-on-bg-soft: var(--color-warning);
-}
-
-.WuiButton--danger {
-  --WuiButton-bg: var(--color-error);
-  --WuiButton-bg-soft: var(--color-error-container);
-  --WuiButton-color-on-bg-soft: var(--color-error);
-}
-
-.WuiButton--primary:disabled,
-.WuiButton--neutral:disabled,
-.WuiButton--success:disabled,
-.WuiButton--warning:disabled {
-  --WuiButton-bg: var(--color-disabled);
-  --WuiButton-bg-soft: var(--color-hover);
-  --WuiButton-color-on-bg-soft: var(--color-black-1);
-}
-
-.WuiButton--solid {
-  background-color: var(--WuiButton-bg, var(--color-primary));
-  color: var(--color-white, var(--color-on-primary));
-}
-
-.WuiButton--solid:not(:disabled):hover,
-/* .WuiButton--solid:not(:disabled):focus, */
-.WuiButton--soft:not(:disabled):hover
-
-/* ,.WuiButton--soft:not(:disabled):focus  */
-  {
-  filter: brightness(0.95);
-}
-
-.WuiButton--outline {
-  background-color: transparent;
-  --WuiButton-border-color: var(--WuiButton-bg, var(--color-primary));
-}
-
-.WuiButton--outline:not(:disabled):hover
-
-/* ,.WuiButton--outline:not(:disabled):focus */
-  {
-  background-color: var(--WuiButton-bg-soft, var(--color-selection-container));
-}
-
-.WuiButton--soft {
-  background-color: var(--WuiButton-bg-soft);
-}
-
-.WuiButton--plain {
-  background-color: transparent;
-}
-
-.WuiButton--plain:not(:disabled):hover
-
-/* ,.WuiButton--plain:not(:disabled):focus */
-  {
-  background-color: var(--WuiButton-bg-soft);
-}
-
-.WuiButton--none,
-.WuiButton--none:hover {
-  background-color: transparent;
-  --WuiButton-height: auto !important;
-  --WuiButton-paddingX: 0 !important;
-}
-
-.WuiButton--width-full {
-  width: 100%;
-}
-
-.WuiButton--width-half {
-  width: 50%;
-}
-
-.WuiButton--width-third {
-  width: 33.333333%;
-}
-
-.WuiButton--width-quarter {
-  width: 25%;
-}
-
-.WuiButton--width-auto {
-  width: auto;
-}
-
-.WuiButton--width-inherit {
-  width: inherit;
-}
-
-.WuiButton--height-full {
-  height: 100%;
-}
-
-.WuiButton--height-half {
-  height: 50%;
-}
-
-.WuiButton--height-third {
-  height: 33.333333%;
-}
-
-.WuiButton--height-quarter {
-  height: 25%;
-}
-
-.WuiButton--height-auto {
-  height: auto;
-}
-
-.WuiButton--height-inherit {
-  height: inherit;
-}
-
-.WuiButton--only-icon {
-  width: var(--WuiButton-height);
-  --WuiButton-paddingX: 0;
-}
-
-.WuiButton__text {
-  max-width: 100%;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  text-decoration: none;
-  white-space: nowrap;
-}
-
-.WuiButton__loader {
-  border: 2px solid var(--WuiButton-bg);
+.WuiButton--loading::before {
+  content: "";
+  border: 1.5px solid transparent;
   border-radius: 50%;
   border-top-color: var(--color-primary);
-  width: 20px;
-  height: 20px;
+  border-right-color: var(--color-primary);
+  width: 16px;
+  height: 16px;
+  position: absolute;
   -webkit-animation: spin 0.8s linear infinite;
   /* Safari */
   -moz-animation: spin 0.8s linear infinite;
