--- a/src/lib/inputs/radio/style.css
+++ b/src/lib/inputs/radio/style.css
@@ -3,40 +3,17 @@
 }
 
 .WuiRadio--sm {
-  --WuiRadio-size: 16px;
+  --WuiRadio-size: 18px;
 }
 
 .WuiRadio--md {
-  --WuiRadio-size: 20px;
+  --WuiRadio-size: 22px;
 }
 
 .WuiRadio--lg {
-  --WuiRadio-size: 24px;
+  --WuiRadio-size: 26px;
 }
 
-.WuiRadio--primary {
-  --WuiRadio-thumb-color: var(--color-primary);
-}
-
-.WuiRadio--neutral {
-  --WuiRadio-thumb-color: var(--color-neutral);
-}
-
-.WuiRadio--neutral input:checked+.WuiRadio__label {
-  --WuiRadio-thumb-color: var(--color-primary);
-}
-
-.WuiRadio--success {
-  --WuiRadio-thumb-color: var(--color-success);
-}
-
-.WuiRadio--warning {
-  --WuiRadio-thumb-color: var(--color-warning);
-}
-
-.WuiRadio--danger {
-  --WuiRadio-thumb-color: var(--color-error);
-}
 
 .WuiRadio__label {
   --WuiRadio-thumb-indicator-display: none;
@@ -66,8 +43,6 @@ input:checked+.WuiRadio__label {
 }
 
 .WuiRadio__thumb {
-  border: 1.3px solid var(--WuiRadio-thumb-color);
-  border-radius: 17px;
   cursor: pointer;
   display: block;
   height: var(--WuiRadio-size);
@@ -80,11 +55,15 @@ input:not(:checked)+.WuiRadio__label:hover .WuiRadio__thumb {
 }
 
 .WuiRadio__thumb::after {
-  background-color: var(--WuiRadio-thumb-color);
-  border-radius: 50%;
+  background-color: var(--WuiSurface-bg);
+  border-radius: inherit;
   content: '';
   display: var(--WuiRadio-thumb-indicator-display) !important;
   height: 100%;
   width: 100%;
   transition: transform 0.2s ease-in-out;
+}
+
+.WuiRadio__thumb.WuiSurface--solid::after {
+  background-color: var(--WuiSurface-color-on-bg);
 }
