--- a/src/lib/typography/text/style.css
+++ b/src/lib/typography/text/style.css
@@ -1,8 +1,6 @@
-.WuiText,
-.WuiAnchor {
-  color: var(--WuiText-color, var(--color-black));
+.WuiText {
   font-size: var(--WuiText-font-size, 1rem);
-  font-weight: 350;
+  font-weight: 300;
   line-height: var(--WuiText-line-height, 1.5rem);
 }
 
@@ -21,31 +19,39 @@
 }
 
 .WuiText--primary {
-  --WuiText-color: var(--color-primary);
+  color: var(--color-primary);
 }
 
 .WuiText--neutral {
-  --WuiText-color: var(--color-black-1);
+  color: var(--color-black-1);
 }
 
 .WuiText--success {
-  --WuiText-color: var(--color-success);
+  color: var(--color-success);
 }
 
 .WuiText--warning {
-  --WuiText-color: var(--color-warning);
+  color: var(--color-warning);
 }
 
 .WuiText--danger {
-  --WuiText-color: var(--color-error);
+  color: var(--color-error);
 }
 
 .WuiText--black {
-  --WuiText-color: var(--color-black);
+  color: var(--color-black-4, #000);
 }
 
 .WuiText--white {
-  --WuiText-color: var(--color-white);
+  color: var(--color-white, #fff);
+}
+
+.WuiText--inherit {
+  color: inherit;
+}
+
+.WuiText--white {
+  color: var(--color-white);
 }
 
 .WuiText--title.WuiText--sm {
@@ -78,40 +84,32 @@
   --WuiText-line-height: 1.75rem;
 }
 
+.WuiText--body.WuiText--xs,
+.WuiText--code.WuiText--xs,
+.WuiText--label.WuiText--xs {
+  --WuiText-font-size: 12px;
+  --WuiText-line-height: 0.875rem;
+}
+
 .WuiText--body.WuiText--sm,
+.WuiText--code.WuiText--sm,
 .WuiText--label.WuiText--sm {
-  --WuiText-font-size: 0.75rem;
+  --WuiText-font-size: 12.8px;
   --WuiText-line-height: 0.875rem;
 }
 
 .WuiText--body.WuiText--md,
+.WuiText--code.WuiText--md,
 .WuiText--label.WuiText--md {
-  --WuiText-font-size: 0.8125rem;
+  --WuiText-font-size: 13.5px;
   --WuiText-line-height: 1rem;
 }
 
 .WuiText--body.WuiText--lg,
+.WuiText--code.WuiText--lg,
 .WuiText--label.WuiText--lg {
-  --WuiText-font-size: 0.9375rem;
+  --WuiText-font-size: 15px;
   --WuiText-line-height: 1.125rem;
-}
-
-.WuiText--label.WuiText--sm,
-.WuiText--code.WuiText--sm {
-  --WuiText-font-size: 0.6875rem;
-  --WuiText-line-height: 0.8125rem;
-}
-
-.WuiText--label.WuiText--md,
-.WuiText--code.WuiText--md {
-  --WuiText-font-size: 0.75rem;
-  --WuiText-line-height: 0.875rem;
-}
-
-.WuiText--label.WuiText--lg,
-.WuiText--code.WuiText--lg {
-  --WuiText-font-size: 0.8125rem;
-  --WuiText-line-height: 0.9375rem;
 }
 
 .WuiText--code {
